--- a/package.json
+++ b/package.json
@@ -17,11 +17,18 @@
   },
   "homepage": "https://github.com/YashdalfTheGray/learn-you-pouchdb#readme",
   "devDependencies": {
+    "bluebird": "^3.1.1",
     "body-parser": "^1.14.2",
     "chalk": "^1.1.1",
+    "del": "^2.2.0",
     "express": "^4.13.3",
+    "gulp": "^3.9.0",
+    "gulp-file": "^0.2.0",
+    "gulp-nodemon": "^2.0.6",
+    "gulp-util": "^3.0.7",
     "lodash": "^4.0.0",
     "morgan": "^1.6.1",
+    "nodemon": "^1.8.1",
     "pouchdb": "^5.2.0",
     "pouchdb-server": "^1.0.0"
   }
